--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^7.2.2",
     "@angular/platform-browser-dynamic": "^7.2.2",
     "@angular/router": "^7.2.2",
+    "@capacitor/android": "^1.0.0-beta.19",
     "@capacitor/cli": "1.0.0-beta.19",
     "@capacitor/core": "1.0.0-beta.19",
     "@capacitor/ios": "^1.0.0-beta.19",
@@ -34,6 +35,7 @@
     "ionic2-calendar": "^0.5.2",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
+    "webrtc-adapter": "^7.2.3",
     "zone.js": "~0.8.29"
   },
   "devDependencies": {
