--- a/package.json
+++ b/package.json
@@ -26,13 +26,19 @@
     "@capacitor/core": "1.0.0-beta.19",
     "@capacitor/ios": "^1.0.0-beta.19",
     "@ionic-native/core": "^5.0.0",
+    "@ionic-native/file-transfer": "^5.5.1",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.1.0",
     "aframe": "^0.9.1",
+    "cordova": "^9.0.0",
+    "cordova-plugin-email": "^1.2.7",
+    "cordova-plugin-file-transfer": "1.7.1",
     "core-js": "^2.5.4",
     "firebase": "^5.10.0",
+    "ionic": "^4.12.0",
     "ionic2-calendar": "^0.5.2",
+    "plugin": "^0.3.3",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
     "webrtc-adapter": "^7.2.3",
@@ -66,5 +72,10 @@
     "tslint": "~5.16.0",
     "typescript": "~3.1.6"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-file-transfer": {}
+    }
+  }
 }
