updated according to implementation plan D4: login placeholder, error feedback, succes feedback, label name, logo downloader button

--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "@angular/platform-browser-dynamic": "^7.2.2",
     "@angular/router": "^7.2.2",
     "@capacitor/android": "^1.0.0-beta.19",
-    "@capacitor/cli": "1.0.0-beta.19",
-    "@capacitor/core": "1.0.0-beta.19",
+    "@capacitor/cli": "^1.0.0-beta.19",
+    "@capacitor/core": "^1.0.0-beta.19",
     "@capacitor/ios": "^1.0.0-beta.19",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/file-transfer": "^5.5.1",
@@ -33,6 +33,7 @@
     "aframe": "^0.9.1",
     "cordova": "^9.0.0",
     "cordova-plugin-email": "^1.2.7",
+    "cordova-plugin-file": "^6.0.1",
     "cordova-plugin-file-transfer": "1.7.1",
     "core-js": "^2.5.4",
     "firebase": "^5.10.0",
